smallslive/static/sass/components/_event-row.scss
$mobile-event-card-width: $event-card-width / 1.5;
$live-card-width-mobile: 46.1vw;
$live-card-width-tablet: 22.85vw;
$live-card-width-medium: 22.85vw;
$live-card-width-large: 15.1vw;
$regular-card-width-mobile: 46.1vw;
$regular-card-width-tablet: 15.1vw;
$regular-card-width-medium: 15.1vw;
$regular-card-width-large: 11.225vw;
$event-card-margin: 0.4vw;
$event-row-padding: 3.5vw;

.live {
  .slide-btn, .slick-slide-btn {
    &.prev,
    &.next {
      @media (min-width: 1366px) {
        height: $live-card-width-large * 0.6;
      }

      @media (max-width: 1365px) and (min-width: 1024px) {
        height: $live-card-width-medium * 0.6;
      }
    }

    &.next {
      border-radius: 10px 0 0 0;
    }
  }

  .event-info-title {
    @media (min-width: 1366px) {
      width: 14vw;
    }

    @media (max-width: 1365px) and (min-width: 1024px) {
      width: 20vw;
    }

    @media (max-width: 1023px) and (min-width: 961px) {
      width: 20vw;
    }

    @media (max-width: $screen-sm-max) {
      width: 44vw;
    }
  }
}

.slide-btn, .slick-slide-btn {
  &.prev,
  &.next {
    border-radius: 10px 0 0 10px;
    background-color: rgba(0, 0, 0, 0.5);
    background-image: url("/static/image/arrow-right-red.svg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 20px;
    cursor: pointer;
    position: absolute;
    top: 0;
    z-index: 1000;
    transition: 0.2s ease all;

    &:hover {
      background-color: rgba(0, 0, 0, 0.9);
    }

    @media (min-width: 1366px) {
      height: $live-card-width-large * 0.6;
    }

    @media (max-width: 1365px) and (min-width: 1024px) {
      height: $live-card-width-tablet * 0.6;
    }

    @media (max-width: 1023px) and (min-width: 961px) {
      height: $live-card-width-tablet * 0.6;
    }
  }

  &.prev {
    transform: scaleX(-1);
    width: 3.1vw;
    left: 0;

    b:before {
      content: "\002b";
      position: absolute;
      right: 0.78vw;
      top: -0%;
    }

    &.today-and-tomorrow-arrow {
      width: 2.5vw;

      @media (max-width: 960px) {
        width: 4vw;
      }

      @media (max-width: 550px) {
        width: 6vw;
        visibility: hidden;
      }
    }
  }

  &.next {
    width: $content-left-padding;
    right: 0;

    b:before {
      content: "\002b";
      left: 0.78vw;
      position: absolute;
      top: 0;
    }

    &.today-and-tomorrow-arrow {
      width: 2.5vw;

      @media (max-width: 960px) {
        width: 4vw;
      }

      @media (max-width: 550px) {
        width: 6vw;
        visibility: hidden;
      }
    }
  }

  b {
    display: none;
    transform-origin: 45% 50%;
    height: auto;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;
    color: $accent-color;
    font-size: 10vh;
    -webkit-transition: -webkit-transform 0.1s ease-out 0s;
    transition: -webkit-transform 0.1s ease-out 0s;
    -o-transition: -o-transform 0.1s ease-out 0s;
    -moz-transition: transform 0.1s ease-out 0s, -moz-transform 0.1s ease-out 0s;
    transition: transform 0.1s ease-out 0s;
    transition: transform 0.1s ease-out 0s, -webkit-transform 0.1s ease-out 0s,
      -moz-transform 0.1s ease-out 0s, -o-transform 0.1s ease-out 0s;
  }
}

#artists {
  .slide-btn, .slick-slide-btn {
    &.prev,
    &.next {
      @media (min-width: 1366px) {
        height: $regular-card-width-large;
      }

      @media (max-width: 1365px) and (min-width: 1024px) {
        height: $regular-card-width-tablet;
      }

      @media (max-width: 1023px) and (min-width: 961px) {
        height: $regular-card-width-tablet;
      }

      @media (max-width: $screen-sm-max) {
        display: none;
      }
    }
  }
}

.event-stripe.archive {
  .slide-btn, .slick-slide-btn {
    &.prev,
    &.next {
      @media (min-width: 1366px) {
        height: $regular-card-width-large * 0.6;
      }

      @media (max-width: 1365px) and (min-width: 1024px) {
        height: $regular-card-width-tablet * 0.6;
      }

      @media (max-width: 1023px) and (min-width: 961px) {
        height: $regular-card-width-tablet * 0.6;
      }
    }
  }
}

.event-row {
  display: flex;
  padding-left: $content-left-padding;

  @media (min-width: $screen-sm-max) {
    padding-left: $content-left-padding;
  }

  @media (max-width: $screen-sm-max) {
    overflow: auto;
  }
}

.tonight-events {
  @extend .event-row;
  padding: 0;

  @media (min-width: $screen-sm-max) {
    padding: 0;
  }
}

.event-display {
  margin-right: $event-card-margin;
  position: relative;
}
/* ... */

